<resources>
    <string name="app_name">Journal App</string>
    <string name="add_entry">Add Entry</string>
    <string name="title_entries">Entries</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="log_out">Log Out</string>

    <string name="action_add_entry">Add Entry</string>

    <string name="enter_entry_title">Enter Entry Title</string>
    <string name="enter_entry_content">Enter Entry Content</string>
    <string name="save_entry">Save Entry</string>
    <string name="update_entry">Update Entry</string>
</resources>
